--- a/assignment3.Rmd
+++ b/assignment3.Rmd
@@ -55,16 +55,12 @@ Part 2:
 
 ```{r}
 
-
-
 #assume vote = 1, all constants stay the same (cancel out) but risk reduction moved from 0% to 4%
 
-bid_single <- function (l) {bid_one = (1 - coeffs[11]*(l))/coeffs[12]
-return(bid_one)
-}
+bid_single = -(0.0007445*4)/-0.0010699
 
-bid_single(l=.04)
-#934.6428
+bid_single  
+#2.78
 #coeff11 is the risk, coeff 12 is the bid
 
 
@@ -75,53 +71,34 @@ Original Function
 vote <- function(a,b,c,d,f,g,h,j,k,l,m){ 0.0099816(a) + -0.0201190(b) +-0.0162261(c) +0.0204401(d) +0.0088282(f) +0.0027386(g)+0.0074891(h)+ 0.0467922(j)+0.0158639(k)+ 0.0007445(l) +  -0.0010699(m) + 0.1196977
 }
 
+Bid equation
+bid <- (vote – 0.0099816(agetofifty) - -0.0201190(agetoforty) - -0.0162261(agetosixty) -0.0204401(agetothrity) - 0.0088282(income_onepercent) -0.0027386(incomepoor) - 0.0074891(incomerich) - 0.0467922(income_veryrich) - 0.0158639(NEP) - 0.0007445(risk) - 0.1196977) / -0.0010699
+
 
 Use 60% as your risk and know that that saves 15 whales. Solve. So 4% risk saves 1 whale
 
 Part 3:
 Pick three people and put in their info and solve for vote. Then set vote to 1 and solve for bid. 
+
+
 ```{r}
 #row 17
-vote1 <- function(a,b,c,d,f,g,h,j,k,l,m){ person1v = coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) +  coeffs[12]*(m) + coeffs[1]
-return(person1v)
-}
-vote1(a= 0, b= 1, c= 0, d= 0, f= 0,g= 1, h=0 , j=0 , k= 30, l=.2 , m=40 )
-#0.5514511 
 
+bid1= (.5 + 0.0201190*1 - 0.0027386*1 - 0.0158639*30 - 0.0007445*20 - 0.1196977) /(-0.0010699)
 
-bid1 <- function (a,b,c,d,g,h,j,k,l,m) {person1b = .5514511  - (coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) + coeffs[1])/coeff[12]
-return(person1b)
-}
-
-bid1(a= 0, b= 1, c=0 , d=0 , f=0, g=1 , h=0 , j=0 , k= 30, l=.6)
+bid1 #87.04
 
 #row 230
-vote2 <- function(a,b,c,d,f,g,h,j,k,l,m){person2v = coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) +  coeffs[12]*(m) + coeffs[1]
-return(person2v)}
 
-vote2(a= 0, b= 0, c= 0, d= 0, f= 0,g= 0, h= 0, j= 1, k= 23, l=.6 , m=80 )
-#0.4462145
+bid2 = (.5- 0.0099816*1 - 0.0088282*1 - 0.0158639*23 - 0.0007445*60 - 0.1196977) / -0.0010699
 
-bid2 <- function (a,b,c,d,g,h,j,k,l,m) {person2b = (0.4462145- (coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) +  coeffs[11]*(m) + coeffs[1])/coeff[12])
-return(person2b)
-}
-
-bid2(a= 0, b= 0, c= 0, d= 0, f= 0,g= 0, h= 0, j= 1, k= 23, l=.6)
+bid2 #44.90
 
 #row400
 
-vote3 <- function(a,b,c,d,f,g,h,j,k,l,m){person3v = coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) +  coeffs[12]*(m) + coeffs[1]
-return(person3v)
-}
-# 0.5469224 
+bid3 = (.5- 0.0158639*31 - 0.0007445*80 - 0.1196977) / -0.0010699
 
-vote3(a=0 , b= 0, c= 0, d= 1, f= 0,g= 0, h= 0, j= 0, k= 31, l= .8, m=80)
-
-bid3 <- function (a,b,c,d,g,h,j,k,l,m) {person3b = ( 0.5469224 - (coeffs[2]*(a) + coeffs[3]*(b) + coeffs[4]*(c) + coeffs[5]*(d) + coeffs[6]*(f) + coeffs[7]*(g) + coeffs[8]*(h) + coeffs[9]*(j) + coeffs[10]*(k) + coeffs[11]*(l) +  coeffs[11]*(m) + coeffs[1])/coeff[12])
-return(person3b)
-}
-
-bid3(a=0 , b= 0, c= 0, d= 1, f= 0,g= 0, h= 0, j= 0, k= 31, l= .6)
+bid3 #159.86
 
 ```
 
@@ -136,12 +113,10 @@ avg_NEP <- mean(whale_data$NEP)
 avg_NEP #38.366
 
 #eguationb for average bid assuming average age is to fifty and income is middle class
-bid_avg <- function (a,k,l) {average = (1- (coeffs[2]*(a) + coeffs[10]*(k)  +  coeffs[11]*(l) + coeffs[1])/coeffs[12])
-  return(average)
-}
+bid_avg = (.70 - 0.0099816*1 - 0.0158639*38.366 - 0.0007445*60 - 0.1196977) / -0.0010699
 
-bid_avg(a = 1.0, k=38.366 , l= 0.6)
-#691.4974
+bid_avg
+#77.5621
 
 
 ```
@@ -150,14 +125,14 @@ bid_avg(a = 1.0, k=38.366 , l= 0.6)
 Part 5:
 Multiply average by 150,000
 ```{r}
-total_wtp <- bid_avg(a = 1.0, k=38.366 , l= 0.6) *150000
+total_wtp <- bid_avg *150000
 total_wtp
-#103,724,610
+#11,634,315
 
 ```
 
 Part 6:
-Compare answer in 5 to 7 million. The answer in part 5 is 103 million, so Santa Barbara residents are willing to pay 103 million to save whales, which outweighs the costs of $7 million to implement the VSR program. There is a net benefit of 97 million dollars to the community.
+Compare answer in 5 to 7 million. The answer in part 5 is 11.6 million, so Santa Barbara residents are willing to pay 11.6 million to save whales, which outweighs the costs of $7 million to implement the VSR program. There is a net benefit of 4.6 million dollars to the community.
 
 
 Part 7:
@@ -167,9 +142,9 @@ Part 8:
 60% risk reduction means 15 whales saved? Multiply what you found in part 2 by 15 to get the social benefit? Since there is no cost associated with the trade you can ignore the $7 million VSR cost.
 
 ```{r}
-social_benefit <-bid_single(l=.04)*15
+social_benefit <-bid_single*15
 social_benefit
-#14019.64 
+#41.75 which doesnt make sense
 
 ```
 
